fix warning deprecated (java)